Правки по пикселю главная и каталог-2.

--- a/catalog.html
+++ b/catalog.html
@@ -111,8 +111,7 @@
               <label for="filter-gallery" class="filter-checkbox">Галерея</label>
             </li>
             <li class="checkbox-item">
-              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="basket" id="filter-basket"
-                checked>
+              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="basket" id="filter-basket">
               <label for="filter-basket" class="filter-checkbox">Корзина</label>
             </li>
           </ul>
