Готовый проект Михайловой О.И. на защиту - правки карта и фильтр.

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic-ext"
     rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/styles.min.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body class="page-body inner-page">
@@ -54,8 +54,8 @@
               <div class="scale">
                 <div class="bar"></div>
               </div>
-              <div class="toggle toggle-min" tabindex="0"></div>
-              <div class="toggle toggle-max" tabindex="0"></div>
+              <div class="toggle toggle-min" aria-label="цена от" tabindex="0"></div>
+              <div class="toggle toggle-max" aria-label="цена до" tabindex="0"></div>
             </div>
             <div class="price-controls">
               <label class="min-price">
@@ -233,13 +233,17 @@
         <div class="contacts-content">
           <h3 class="contacts-title">NЁRDS DESIGN STUDIO</h3>
           <p class="contacts-text">191186, Санкт-Петербург,<br>
-            ул. Б. Конюшенная, д. 19/8</p>
+            ул. Б. Конюшенная, д. 19/8
+          </p>
           <div class="contacts-link">
             <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
           </div>
           <a href="#" class="button button-primary contacts-button">напишите нам</a>
         </div>
       </div>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
+        width="100%" height="416" title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
     </section>
 
     <div class="footer-info container">
